--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack",
-    "devserver": "webpack serve"
+    "devserver": "webpack serve --mode development"
   },
   "repository": {
     "type": "git",
