--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack",
-    "devserver": "webpack serve --mode development"
+    "devserver": "webpack serve --mode development",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -22,13 +24,18 @@
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
+    "crypto": "^1.0.1",
     "css-loader": "^6.7.1",
     "cssnano": "^5.1.13",
+    "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "path": "^0.12.7",
     "postcss-loader": "^7.0.1",
+    "util": "^0.12.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.1"
+    "webpack-dev-server": "^4.10.1",
+    "zlib": "^1.0.5"
   }
 }
